[package]
name = "svc-authz"
version = "0.10.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An authorization library."
readme = "README.md"
keywords = ["authorization", "authz", "middleware"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/netology-group/svc-authz-rs"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "netology-group/svc-authz-rs" }

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
futures-timer = "1.0"
async-trait = "0.1"
jsonwebtoken = "6.0"
http-client = "1"
surf = "2.0.0-alpha.0"
r2d2_redis = "0.12"
chrono = "0.4"
svc-authn = { version = "0.5", features = ["jose"] }
