[package]
name = "svc-authz"
version = "0.11"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An authorization library."
readme = "README.md"
keywords = ["authorization", "authz", "middleware"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/netology-group/svc-authz-rs"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "netology-group/svc-authz-rs" }

[dependencies]
tokio = { version = "1", features = [ "time", "rt", "io-util" ] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
jsonwebtoken = "7.1"
http-types = "2"
reqwest = "0.11"
r2d2_redis = "0.14"
chrono = "0.4"
svc-authn = { version = "0.6", features = ["jose"] }
bytes = "1"