[package]
name = "svc-authz"
version = "0.11.1"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An authorization library."
readme = "README.md"
keywords = ["authorization", "authz", "middleware"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/netology-group/svc-authz-rs"
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
jsonwebtoken = "8.2"
log = "0.4"
r2d2_redis = "0.14"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
svc-authn = { version = "0.7", features = ["jose"] }
tokio = { version = "1", features = [ "rt" ] }
